--- a/_drafts/2018-04-13-08-45-45.md
+++ b/_drafts/2018-04-13-08-45-45.md
@@ -16,4 +16,4 @@ The histories of religions are fascinating. I'm always surprised to learn and re
 
 > I teach students who, despite being practicing Christians, don’t know that Jesus harshly criticizes divorce and never speaks about homosexuality, or that the “Old Testament” was originally the Hebrew Bible, a collection of diverse texts compiled over time by ancient Israelites. 
 
-Absolutely shameful to not know such basic facts, if you were to be a Christian. This is "the world is round" and "the sky is blue" type of stuff.
+Absolutely shameful to not know such basic facts, especially if you call yourself a Christian. This is "the world is round" and "the sky is blue" type of stuff.
