--- a/_posts/photoblog/2018-10-08-07-00-46.md
+++ b/_posts/photoblog/2018-10-08-07-00-46.md
@@ -6,4 +6,4 @@ tags:
 category: photos
 ---
 
-![title](/assets/photoblog/new-home-golden-hour.jpg)
+![title](/assets/photoblog/new-home-golden-hour.JPG)
